# luaDev

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING  LICENSE-MIT  README.md  luaDev.root  package-lock.json  package.json
docs/: intro.md  overview.md  what-new.md
docs/builds/lua/5.4.8.md/: log.md
docs/dev/: build-system.md  buildLua.md  quick-dev-note.md
docs/dev/manifests/: manifest.md
docs/setup/: linux-prereqs.md  windows-prereqs.md
docs/troubleshooting/: _category_.json  rust-linker-not-found.md
docs/usage/: 01-build-lua.md  _category_.json  win-build.md
manifests/: manifest.json  manifest.md
scripts/: buildLua.ps1  luaDev-prereqs.ps1  luaDev-prereqs.sh
scripts/modules/: cmake.psm1  downloader.psm1  environment.psm1  export.psm1  globals.psm1  loader.psm1  logexporter.psm1  logging.psm1  luaBuilder.psm1  luaDev-prereqs.ps1  luajitBuilder.psm1  manifest.psm1  manifestsExporter.psm1  versioning.psm1
scripts/sources/lua-5.1.5/: Makefile
scripts/sources/lua-5.2.4/: Makefile
scripts/sources/lua-5.3.6/: Makefile
scripts/sources/lua-5.4.8/: Makefile
sources/LuaJIT-2.0.5/: CMakeLists.txt
sources/LuaJIT-2.0.5/build-msvc/: CMakeCache.txt
sources/LuaJIT-2.1.0-beta3/: CMakeLists.txt
sources/LuaJIT-2.1.0-beta3/build-clang/: CMakeCache.txt
sources/LuaJIT-2.1.0-beta3/build-msvc/: CMakeCache.txt
sources/lua-5.1.5/: CMakeLists.txt
sources/lua-5.1.5/build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
sources/lua-5.1.5/build-msvc/: CMakeCache.txt
sources/lua-5.2.4/: CMakeLists.txt
sources/lua-5.2.4/build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
sources/lua-5.2.4/build-msvc/: CMakeCache.txt
sources/lua-5.3.6/: CMakeLists.txt
sources/lua-5.3.6/build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
sources/lua-5.3.6/build-msvc/: CMakeCache.txt
sources/lua-5.4.8/: CMakeLists.txt
sources/lua-5.4.8/build-clang/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
sources/lua-5.4.8/build-msvc/: CMakeCache.txt
templates/cmake/: CMakeLists.5.1.txt  CMakeLists.5.2.txt  CMakeLists.5.3.txt  CMakeLists.5.4.txt  CMakeLists.lua.default.txt  CMakeLists.luajit.default.txt  CMakeLists.luajit.txt  lua-5.1.cmake  lua-5.2.cmake  lua-5.3.cmake  lua-5.4.cmake  luajit-2.0.5.cmake  luajit-2.1.0.cmake  luajit-2.1.cmake
